# timetable

./: .gitignore  index.html  package-lock.json  wrangler.toml
backend/: .env  .gitignore  Cargo.toml  Dockerfile  docker-compose.yaml  recipe.json  timetables.db
backend/migrations/2023-04-02-120410_faculties/: down.sql  up.sql
backend/migrations/2023-04-07-103341_groups/: down.sql  up.sql
backend/migrations/2023-04-24-094522_timetables/: down.sql  up.sql
backend/src/: database.rs  lib.rs  main.rs  routes.rs  scheduling.rs  scraping.rs
backend/src/database/: models.rs  schema.rs
backend/src/routes/: util.rs
cf-worker/: Cargo.toml  cf-worker.nix  package-lock.json  package.json  wrangler.toml
cf-worker/public/: error.html
cf-worker/src/: asset.rs  data.rs  handlers.rs  lib.rs  templating.rs  utils.rs
cf-worker/static/: index.html  style.css
discord-bot/: CONFIG.env  Dockerfile  bot.py  docker-compose.yaml  timetable.py
web-worker/: Cargo.toml
web-worker/src/: data.rs  lib.rs
