[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
clap = { version = "4.1.13", features = ["derive"] }
delay_timer = "0.11.4"
diesel = { version = "2.0.3", features = ["sqlite"] }
dotenvy = "0.15.7"
env_logger = "0.10.0"
json = "0.12.4"
log = "0.4.17"
reqwest = { version = "0.11.16", features = ["json"] }
scraper = "0.15.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
serde_qs = "0.12.0"
